# Projection_algorithm-ML

./: .gitignore  CMakeLists.txt  Postprocess.asv  Postprocess.m  deleteme.cpp  main  main.cpp  p.csv  test.cpp  u.csv  v.csv  velocity.csv
ML/: 01_Random_main.ipynb  Training.ipynb  Untitled.ipynb  Untitled1.ipynb
ML/.ipynb_checkpoints/: 01_Random_main-checkpoint.ipynb
ML/data/data_reserved/Re_100/: Untitled.ipynb
ML/test/: CMakeLists.txt  test.cpp
ML/test_2/: Makefile  main.cpp
ML/test_2/.ipynb_checkpoints/: Training-checkpoint.ipynb
peek/: Postprocess.asv  Postprocess.m
result/: Postprocess.m
